feat: Include new test , handle exceptions, change packages
